--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -18,4 +18,4 @@ jobs:
       with:
         java-version: 1.8
     - name: Build with Gradle
-      run: ./gradlew :lazyviewmodels:buildRelease
+      run: ./gradlew :lazyviewmodels:build
