--- a/lazyviewmodels/build.gradle
+++ b/lazyviewmodels/build.gradle
@@ -1,7 +1,8 @@
 plugins {
     id 'com.android.library'
+    id 'kotlin-android'
+    id 'maven-publish'
 }
-apply plugin: 'kotlin-android'
 
 android {
     compileSdkVersion 30
@@ -25,6 +26,27 @@ android {
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
+    }
+
+    afterEvaluate {
+        publishing {
+            publications {
+                create(MavenPublication) {
+                    from components.release
+                }
+            }
+
+            repositories {
+                maven {
+                    name = "GitHubPackages"
+                    url = uri("https://maven.pkg.github.com/robotsquidward/lazyviewmodels")
+                    credentials {
+                        username = System.getenv("GITHUB_ACTOR")
+                        password = System.getenv("GITHUB_TOKEN")
+                    }
+                }
+            }
+        }
     }
 }
 
