--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,7 +38,8 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.3.2'
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.2.1'
-    
+    implementation "androidx.lifecycle:lifecycle-viewmodel-savedstate:2.2.0"
+
     // Test pull of library from GitHub Packages
     //implementation 'dev.ajkueterman:lazyviewmodels:0.0.3'
 
